--- a/src/components/PullScreen/PullScreen.module.css
+++ b/src/components/PullScreen/PullScreen.module.css
@@ -1,7 +1,5 @@
 .pullScreen {
-  width: 100%;
-  height: 100vh;
   cursor: pointer;
   position: absolute;
-  z-index: -10; /* this is so any other page overrides it */
+  z-index: 0; /* this is so any other page overrides it */
 }
