--- a/src/components/SiteCarousel/SiteCarousel.css
+++ b/src/components/SiteCarousel/SiteCarousel.css
@@ -15,7 +15,7 @@
 
 .siteCarouselPositioner {
   position: absolute;
-  bottom: 100px;
+  bottom: 0;
   width: 100%;
   display: flex;
   flex-flow: column;
@@ -25,14 +25,25 @@
 .innerSlide {
   margin: 60px 40px;
   text-align: center;
-  height: 200px;
+  height: 400px;
   transition: scale 300ms ease;
   color: white;
   cursor: pointer;
 }
 
-.siteCarousel .slick-center img {
-  transform: scale(1.5);
+/* default slide needs to shrink */
+.slick-active {
+  transform: scale(0.5);
+}
+
+/* sadly this doesn't seem to work!
+.slick-active:nth-of-type(1),
+.slick-active:nth-of-type(5) {
+  transform: scale(0.3);
+}
+*/
+.siteCarousel .slick-center {
+  transform: scale(0.75);
 }
 
 .slick-list {
