--- a/src/containers/RiverRanchPullScreen/RiverRanchPullScreen.module.css
+++ b/src/containers/RiverRanchPullScreen/RiverRanchPullScreen.module.css
@@ -1,3 +1,3 @@
 .image {
-  object-fit: 'cover';
+  object-fit: cover;
 }
